# custom-mv

./: .gitignore  Makefile  README.md  SQL_tasks.md  pyproject.toml
custom_mv/: file_mover.py
custom_mv/scripts/: cmv.py
tests/: test_cmv.py
