[tool.poetry]
name = "uralsib-tasks"
version = "0.1.0"
description = ""
authors = ["Konstantin Freidlin <freidlinks@ya.ru>"]
readme = "README.md"
packages = [{include = "custom_mv"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^1.4.44"
argparse = "^1.4.0"
pytest-asyncio = "^0.20.2"
pytest-cov = "^4.0.0"
aiofiles = "^22.1.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cmv = "custom_mv.scripts.cmv:main"